// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Modal Component > renders correctly with title, description, trigger, and matches snapshot 1`] = `
<div>
  <button
    aria-controls="radix-:r0:"
    aria-expanded="false"
    aria-haspopup="dialog"
    data-state="closed"
    type="button"
  >
    Open Modal
  </button>
</div>
`;

exports[`Modal Component > renders with custom footer and matches snapshot 1`] = `
<div>
  <button
    aria-controls="radix-:r3:"
    aria-expanded="false"
    aria-haspopup="dialog"
    data-state="closed"
    type="button"
  >
    Open Modal
  </button>
</div>
`;

exports[`Modal Component > renders without description and matches snapshot 1`] = `
<div>
  <button
    aria-controls="radix-:r6:"
    aria-expanded="false"
    aria-haspopup="dialog"
    data-state="closed"
    type="button"
  >
    Open Modal
  </button>
</div>
`;
